bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: value and is not a member of Boolean
    if(a<0 and b<0){
           ^PosNeg:10: error: value and is not a member of Boolean
  }else if(a<0 and b>0){
               ^PosNeg:12: error: value and is not a member of Boolean
  }else if(a>0 and b<0){
               ^